browser/css/jsdialogs.css
/* ... */
.ui-combobox-icon {
	background-repeat: no-repeat !important;
	width: var(--btn-size);
	height: var(--btn-size);
}

/* these rules are for custom rendering like font previews */
.ui-combobox-entry img {
	border: 1px solid transparent;
	max-height: 24px; /* required for hidpi*/
}

.ui-combobox-entry img:hover {
	border: 1px solid var(--color-border-darker);
	filter: contrast(0.5);
}

.ui-combobox-entry.selected img:not(:hover) {
	border: 1px solid var(--color-primary);
}

[data-theme='dark'] .ui-combobox-entry img {
	filter: invert(1);
}

/* Combobox entry with menu and thus arrow/chevron */
.ui-combobox-entry.ui-has-menu {
	display: grid;
	grid-template-columns: 1fr 25px;
	align-items: center;
}

/* add extra column space for the icon. */
.ui-combobox-entry.ui-has-menu.ui-has-img {
	grid-template-columns: 25px 1fr 25px;
}

/* Arrow/chevron */
.ui-combobox-entry.ui-has-menu::after {
	content: '';
	display: inline-block;
	width: 9px;
	background: url('images/lc_menu_chevron.svg') no-repeat;
	height: 9px;
	margin-inline-start: -9px;
}

.ui-combobox-entry.ui-has-menu > span {
	/* menu entries have 5px all around padding,
	 add extra 9px at the horizontal end = 14px
	 so we can re-position the arrow/chevron  */
	padding-inline-end: 14px;
}

/* Apply style always show real colors */
#applystyle-dropdown .ui-dialog-content {
	background-color: white !important;
}

#applystyle-dropdown .ui-combobox-entry img {
	filter: none !important;
	max-height: 30px; /* hidpi, avoid blurry text */
}

/* ui-textarea */
.jsdialog.ui-textarea {
	color: var(--color-text-dark);
	background-color: var(--color-background-dark);
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
	vertical-align: top;
	width: -webkit-fill-available;
	width: -moz-available;
}

/* buttons: btns.css */

/* Overflow group */

.ui-overflow-manager {
	display: flex !important;
}

.ui-overflow-group {
	flex-flow: column;
}

.ui-overflow-group,
.ui-overflow-group-content {
	display: flex;
}

.ui-overflow-group-bottom {
	text-align: center;
	align-items: center;
}

.notebookbar.ui-overflow-group-bottom {
	display: flex;
	padding: 0 5px;
	width: 100%;
	box-sizing: border-box;
}


.ui-overflow-group-label {
	font-family: var(--cool-font);
	font-size: var(--overflow-group-font-size);
	color: var(--color-text-lighter);
	flex-grow: 1;
	text-align: center;
}

#design-master-page-group-content.ui-overflow-group-inner {
	display: flex;
	justify-content: center;
	align-items: center;
}
/* Icon View */

.ui-iconview {
	overflow: auto;
	justify-content: space-between;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	max-height: 40vh;
	gap: 2px;
	padding: 2px;
}

.ui-iconview.mobile-wizard {
	justify-content: space-around;
}

@supports (display: flex) {
	.ui-iconview-entry {
		flex: 1;
	}
}

.ui-iconview-entry {
	float: left;
	text-align: center;
	position: relative;
	flex-direction: row;
	align-self: center;
	border: 1px solid transparent;
	border-radius: var(--border-radius);
	text-wrap: nowrap;
	font-family: var(--cool-font);
}

.ui-iconview-entry.selected {
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
	background-color: var(--color-background-dark);
}

.ui-iconview-entry:hover {
	border: 1px solid var(--color-border-darker);
	background-color: var(--color-background-darker);
}

.ui-iconview-entry img {
	vertical-align: middle;
	justify-self: center;
}

.ui-iconview-separator {
	flex: 0 0 99%;
}

.ui-iconview-entry-title {
	font-size: var(--default-font-size);
}

.icon-view-item-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

/* Autofilter dropdown */

.autofilter.row {
	display: table-row;
}

.autofilter.cell {
	display: table-cell;
	vertical-align: middle;
	padding: 2px;
}

.autofilter-container {
	background-color: var(--color-main-background);
	border: 1px solid var(--color-border);
	position: absolute;
	z-index: 1105;
	padding: 0;
	font-family: var(--cool-font);
}

.autofilter-container > .root-container,
.autofilter-container .cell,
.autofilter-container .row {
	margin: 0;
	padding: 0;
}

.autofilter-container .ui-treeview {
	border: none;
}
.autofilter-container #menu.ui-treeview {
	height: auto;
	width: 100%;
	padding: 8px 1px;
}

.autofilter-container #toggle_all.checkbutton {
	display: flex;
}

.autofilter-container #menu + #search_edit {
	display: block;
}

#mobile-wizard #toggle_all.checkbutton + #select_current,
.autofilter-container #select_current {
	background: url('images/lc_checkbox.svg') no-repeat center;
}

[data-theme='dark'] #mobile-wizard #toggle_all.checkbutton + #select_current,
.autofilter-container #select_current {
	background: url('images/dark/lc_checkbox.svg') no-repeat center;
}

.autofilter-container #select_current {
	/* Same size as #toggle_all.checkbutton > input */
	height: 18px;
	width: 18px;
	margin: 8px;
	border: none;
}

#mobile-wizard #toggle_all.checkbutton + #select_current + #unselect_current,
.autofilter-container #unselect_current {
	background: url('images/lc_checkboxoff.svg') no-repeat center;
}

[data-theme='dark'] #mobile-wizard #toggle_all.checkbutton + #select_current + #unselect_current,
.autofilter-container #unselect_current {
	background: url('images/dark/lc_checkboxoff.svg') no-repeat center;
}

.autofilter-container #unselect_current {
	/* Same size as #toggle_all.checkbutton > input */
	height: 18px;
	width: 18px;
	margin: 8px 8px 8px 0px;
	border: none;
}

.autofilter-container #unselect_current img,
.autofilter-container #select_current img {
	display: none;
}

.autofilter-container #toggle_all.checkbutton > label,
.autofilter-container #toggle_all.checkbutton > input {
	height: 18px;
	line-height: normal;
}

.autofilter-container #check_tree_box.ui-treeview,
.autofilter-container #check_list_box.ui-treeview {
	width: 100%;
	min-width: 200px;
	max-height: 150px;
}
/* ... */

